--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="button-content">
                     <button class="project-details-button download-cv">
-                        <a href="#">Detalles proyecto</a>
+                        <a href="">Detalles proyecto</a>
                     </button>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                 <!-- proyecto3 -->
                 <div class="button-content">
                     <button class="project-details-button download-cv">
-                        <a href="#">Detalles proyecto</a>
+                        <a href="">Detalles proyecto</a>
                     </button>
                 </div>
             </div>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="button-content">
                     <button class="project-details-button download-cv">
-                        <a href="#">Detalles proyecto</a>
+                        <a href="">Detalles proyecto</a>
                     </button>
                 </div>
             </div>
